--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "morgan": "^1.10.0"
   },
   "devDependencies": {
-    "mocha": "^9.1.4"
+    "mocha": "^9.1.4",
+    "should": "^13.2.3"
   }
 }
