--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "devDependencies": {
     "mocha": "^9.1.4",
-    "should": "^13.2.3"
+    "should": "^13.2.3",
+    "supertest": "^6.2.2"
   }
 }
